--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     width: 70%;
     max-width: 800px;
     height: 300px;
-    background: rgb(46, 46, 46);
+    background: #d4af37;
     position: relative;
 }
 
@@ -29,10 +29,27 @@ body {
     cursor: pointer;
 }
 
+.whiteKeys:active {
+    background: linear-gradient(to bottom, rgb(248, 248, 248), rgb(238, 238, 238), grey);
+    box-shadow: 2px -2px black inset, -4px -2px black inset;
+}
+
+.whiteKeys:hover {
+    background-color: rgb(228, 228, 228);
+}
+
 .blackKeys {
     width: 3.5%;
     height: 50%;
-    background-color: black;
+    background-color: rgb(34, 34, 34);
     position: absolute;
     cursor: pointer;
+}
+
+.blackKeys:hover {
+    background-color: rgb(36, 36, 36);
+}
+
+.blackKeys:active {
+    background-color: black;
 }
