--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
-    height: 100vh;
+    max-height: 100vh;
+    background-image: url('background1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: white;
 }
 
 #piano {
@@ -8,8 +12,10 @@ body {
     width: 70%;
     max-width: 800px;
     height: 300px;
-    background: #d4af37;
+    background-color: #000000;
+    background-image: linear-gradient(to bottom, #000000 0%, #414141 74%);
     position: relative;
+    box-shadow: 4px 4px 4px rgb(48, 48, 48);
 }
 
 #keys {
@@ -52,4 +58,31 @@ body {
 
 .blackKeys:active {
     background-color: black;
+}
+
+#volumeBar {
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+
+.fa-volume-up {
+    color: yellow;
+    font-size: 36px;
+}
+
+.fa-plus {
+    color: green;
+    cursor: pointer;
+}
+
+.fa-minus {
+    color: red;
+    cursor: pointer;
+}
+
+#volume {
+    font-weight: 800;
+    font-size: 1.5rem;
+    user-select: none;
 }
